change name for npm publish

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "atm_project",
+  "name": "@aasifali/atm_project",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
+  "publishConfig": {
+    "access": "public"
+  },
+  "bin": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
